<resources>
    <string name="app_name">ModulabschlussAndroid</string>
    <string name="search">Suche</string>
    <string name="sure_to_leave">App wirklich verlassen?</string>
    <string name="close_app">App schließen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="HomeIntro">Finde jetzt Garagen, Stellplätze und Lager in deiner Nähe, sofort verfügbar ganz einfach über die Suche.</string>
    <string name="item_description">Description for Object Item</string>
    <string name="item_city">Ort</string>
    <string name="item_objekt">Objekt</string>
    <string name="item_price">Preis</string>
    <string name="item_zip_code">Postleitzahl</string>
    <string name="favorite_zip_code">Postleitzahl</string>
    <string name="favorite_latitude">Latitude</string>
    <string name="favorite_longitude">Longitude</string>
    <string name="favorite_description">Description</string>
    <string name="favorite_price">Preis</string>
    <string name="favorite_object">Objekt</string>
    <string name="favorite_city">Ort</string>
    <string name="title">Projekt Winterschlaf</string>
    <string name="forward">weiter</string>
    <string name="register_text">Zur Registrierung bitte deine Email und zweimal das gewünschte Passwort eingeben. Das Passwort sollte mindestens aus 8 Zeichen bestehen.</string>
    <string name="logout_text">Ausloggen :</string>
    <string name="user_name">Benutzername</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Speichern</string>
    <string name="back">zurück</string>
    <string name="title_register">Registrierung der Anmeldedaten</string>
    <string name="input_email">Email eingeben</string>
    <string name="input_password">Passwort eingeben</string>
    <string name="input_password_confirm">Passwort wiederholen</string>
    <string name="tv_forward">Nach Eingabe bitte rechts oben auf weiter klicken, viel Spaß</string>
    <string name="enterzipcode">Postleitzahl eingeben</string>
    <string name="enter_street_number">Hausnummer eingeben</string>
    <string name="enterCity">Stadt eingeben</string>
    <string name="garage">Garage</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="camperParkInside">Hallenstellplatz</string>
    <string name="camperParkOutside">Aussenstellplatz</string>
    <string name="parkingSpot">Parkplatz</string>
    <string name="underGroundParking">Tiefgarage</string>
    <string name="carport">Carport</string>
    <string name="storage">Lager</string>
    <string name="storagehall">Lagerhalle</string>
    <string name="storageroom">Lagerraum</string>
    <string name="storagebox">Lagerbox</string>
    <string name="container">Container</string>
    <string name="basement">Keller</string>
    <string name="barn">Scheune</string>
    <string name="openspace">Freifläche</string>
    <string name="yard">Hof</string>
    <string name="enterdescription">Beschreibung eingeben</string>
    <string name="chatnews">Nachrichten</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_favorite">Favoriten</string>
    <string name="navbar_insert">Inserieren</string>
    <string name="navbar_chat">Chat</string>
    <string name="navbar_profile">Profil</string>
    <string name="detailview">Detailansicht</string>
    <string name="detail_city">Ort</string>
    <string name="detail_title">Objekt</string>
    <string name="detail_price">Preis</string>
    <string name="detail_koordinates">Koordinaten</string>
    <string name="detail_latitude">Latitude</string>
    <string name="detail_longitude">Longitude</string>
    <string name="detail_showdistance">Entfernung anzeigen</string>
    <string name="detail_description">Description</string>
    <string name="detail_author">Anbieter</string>
    <string name="detail_sendmessage">Schreibe eine Nachricht</string>
    <string name="editing_profile">Profil bearbeiten</string>
    <string name="change_profile_image">Profilbild ändern</string>
    <string name="enter_prename">Vorname eingeben</string>
    <string name="prename">Vorname</string>
    <string name="enter_name">Nachname eingeben</string>
    <string name="name">Nachname</string>
    <string name="zipcode">Postleitzahl</string>
    <string name="enter_city">Ortsname eingeben</string>
    <string name="city">Ortsname</string>
    <string name="enter_street">Straße eingeben</string>
    <string name="street">Straße</string>
    <string name="streetnumber">Hausnummer</string>
    <string name="enter_phone">Telefonnummer eingeben</string>
    <string name="phone">Telefonnummer</string>
    <string name="favorites">Deine gespeicherten Favoriten</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="quicksearch_zipcode">Schnellsuche PLZ</string>
    <string name="more_infos">Mehr Infos</string>
    <string name="info_text">Projekt Winterschlaf ist eine App zum schnellen Finden von Garagen, Stellplätzen und Lagern in Deiner Nähe.\n\nAlle Plätze sind sofort verfügbar und in Abstimmung mit dem Vermieter online oder vorOrt zu mieten.\n\nFür Vermieter ist das Inserieren völlig kostenfrei und durch die intuitive Menüführung in wenigen Minuten erldedigt.\n\nTeile erstellte oder gerade gefundene Objekte mit deinen Freunden oder Geschäftspartnern.\n\nViel Spaß</string>
    <string name="new_ad">Neues Inserat</string>
    <string name="enter_categorie">1 - Kategorien auswählen</string>
    <string name="new_enter_zipcode">2 - Postleitzahl hinzufügen</string>
    <string name="new_enter_city">3 - Stadt hinzufügen</string>
    <string name="new_enter_title">4 - Überschrift hinzufügen</string>
    <string name="new_enter_description">5 - Beschreibung hinzufügen</string>
    <string name="new_enter_price">6 - Preis hinzufügen</string>
    <string name="new_enter_pic1">Foto</string>
    <string name="new_enter_pic2">Foto</string>
    <string name="new_enter_pic3">Foto</string>
    <string name="new_enter_pic4">Foto</string>
    <string name="new_enter_pic5">Foto</string>
    <string name="go">Los</string>
    <string name="wellcome">Willkommen</string>
    <string name="loading">wird geladen...</string>
    <string name="login">Login</string>
    <string name="no_account_please_register">Noch keinen Account, hier registrieren</string>
    <string name="register">Registrieren</string>
    <string name="message">Nachricht</string>
    <string name="edit">editieren</string>
    <string name="profile">Profil</string>
    <string name="my_ads">Meine Inserate</string>
    <string name="zero">0</string>
    <string name="number_old_ads">Meine bisherigen Inserate</string>
    <string name="all_ads_online">Alle Inserate online 0</string>
    <string name="login_screen">Anmeldedaten eingeben</string>
    <string name="text_user_login">Zur Anmeldung bitte deine Email und \ndein Passwort eingeben, falls Du noch keinen Account hast, gehe bitte zurück und registriere dich zuerst</string>
    <string name="enter_email">Email eingeben</string>
    <string name="enter_password">Passwort eingeben</string>
    <string name="text_goOn">Nach Eingabe bitte rechts oben auf \nweiter klicken, viel Spaß</string>
    <string name="user_no_account">Noch keinen Account\nhier registrieren</string>
    <string name="text_first_login">Herzlich Willkommen bei Projekt Winterschlaf.\n\nDu musst zuerst deine Daten im Profil ergänzen.\n\nKlicke auf den Button \n-Verstanden -</string>
    <string name="gotit">Verstanden</string>
    <string name="clear">X</string>
    <string name="enter_price">Preis eingeben</string>
    <string name="enter_title">Überschrift eingeben</string>
    <string name="enter_zipCode">Postleitzahl eingeben</string>
</resources>