<?xml version="1.0" encoding="utf-8"?>

    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_favorite_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/primary_light_green"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/materialDividerBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:strokeColor="@color/primary_dark_green"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/iv_favorite_object1"
                        android:layout_width="85dp"
                        android:layout_height="84dp"
                        android:layout_marginEnd="3dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bild_halle"/>


                    <ImageView
                        android:id="@+id/iv_favorite_object2"
                        android:layout_width="85dp"
                        android:layout_height="84dp"
                        android:layout_marginEnd="3dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bild_halle" />

                    <ImageView
                        android:id="@+id/iv_favorite_object3"
                        android:layout_width="85dp"
                        android:layout_height="84dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bild_halle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_favorite_city"
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            android:text="@string/favorite_city" />

                        <TextView
                            android:id="@+id/tv_favorite_object"
                            style="@style/textSuperSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            android:text="@string/favorite_object" />

                        <TextView
                            android:id="@+id/tv_favorite_price"
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            android:text="@string/favorite_price"
                            android:textColor="@color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:dividerColor="@color/primary_dark_green" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tv_distance"
                        android:layout_marginEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/favorite_zip_code" />

                    <TextView
                        android:id="@+id/tv_latitude"
                        android:layout_marginStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/favorite_latitude" />

                    <TextView
                        android:id="@+id/tv_longitude"
                        android:layout_marginEnd="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:text="@string/favorite_longitude" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_get_distance"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="100"
                        android:text="@string/detail_showdistance"
                        android:textColor="@color/primary_light_green"
                        app:cornerRadius="10dp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="11"
                        android:orientation="vertical">



                    <ImageView
                            android:id="@+id/iv_in_bigsize"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/lagerhalle" />

                        <TextView
                            android:id="@+id/tv_favorite_description"
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/detail_description" />

                        <com.google.android.material.divider.MaterialDivider
                            android:id="@+id/materialDividerMiddle"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            app:dividerColor="@color/primary_dark_green"
                            app:layout_constraintBottom_toBottomOf="@+id/toolbar"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <ImageButton
                                android:id="@+id/iv_favorite_liked"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/primary_light_green"
                                android:src="@drawable/star_unlike" />


                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_message"
                            style="@style/textSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/detail_sendmessage"
                            android:textColor="@color/primary_light_green"
                            app:cornerRadius="10dp" />

                    </LinearLayout>

                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
